<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list book -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_layout"
    android:background="@color/tan_background">

    <ImageView
        android:id="@+id/image"
        style="@style/cover_image"
        android:layout_width="@dimen/list_book_width"
        android:layout_height="@dimen/list_book_height"
        android:src="@drawable/no_cover" />

    <LinearLayout
        android:id="@+id/book_text_container"
        style="@style/book_text_container">

        <LinearLayout style="@style/linear_layout">

            <TextView
                style="@style/bookTitles"
                android:layout_weight="1"
                android:text="@string/book_title" />

            <TextView
                android:id="@+id/book_title"
                style="@style/bookText"
                android:layout_weight="2"
                tools:text="@string/book_title" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout">

            <TextView
                style="@style/bookTitles"
                android:layout_weight="1"
                android:text="@string/author" />

            <TextView
                android:id="@+id/book_author"
                style="@style/bookText"
                android:layout_weight="2"
                tools:text="@string/author" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout">

            <TextView
                style="@style/bookTitles"
                android:layout_weight="1"
                android:text="@string/pageCount" />

            <TextView
                android:id="@+id/pageCount"
                style="@style/bookText"
                android:layout_weight="2"
                tools:text="@string/pageCount" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout">

            <TextView
                style="@style/bookTitles"
                android:layout_weight="1"
                android:text="@string/publishedDate" />

            <TextView
                android:id="@+id/publishedDate"
                style="@style/bookText"
                android:layout_weight="2"
                tools:text="@string/publishedDate" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout">

            <TextView
                style="@style/bookTitles"
                android:layout_weight="1"
                android:text="@string/description" />

            <TextView
                android:id="@+id/book_description"
                style="@style/bookText"
                android:layout_weight="2"
                tools:text="@string/description" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>